workloads/nodejs-dev-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-dev
  namespace: dev
  labels:
    app: nodejs-dev
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.app: regexp:^dev-.*
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: nodejs-dev
  template:
    metadata:
      labels:
        app: nodejs-dev
    spec:
      containers:
      - name: nodejs-dev
        image: andrewpgit/app:dev-3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 1024m
            memory: 256Mi
          requests:
            cpu: 10m
            memory: 128Mi
