workloads/ingress-rules-production.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  namespace: production
  name: test-prod-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.nodejs.ua
    http:
      paths:
        - path: /prod
          backend:
            serviceName: nodejs-production
            servicePort: 80
