workloads/ingress-rules.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: test-ingress
spec:
  rules:
    - host: test.nodejs.com
      http:
        paths:
          - path: /dev
            backend:
              serviceName: nodejs-dev
              servicePort: 80
          - path: /stage
            backend:
              serviceName: nodejs-stage
              servicePort: 80
